@@ -1,5 +1,6 @@
 package software.uncharted.terarium.hmiserver.service;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -11,6 +12,7 @@ import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.security.MessageDigest;
 import java.util.ArrayList;
@@ -44,6 +46,7 @@ import software.uncharted.terarium.hmiserver.models.ClientEventType;
 import software.uncharted.terarium.hmiserver.models.TerariumAssetEmbeddings;
 import software.uncharted.terarium.hmiserver.models.dataservice.document.DocumentAsset;
 import software.uncharted.terarium.hmiserver.models.dataservice.document.DocumentExtraction;
+import software.uncharted.terarium.hmiserver.models.dataservice.document.ExtractedDocumentPage;
 import software.uncharted.terarium.hmiserver.models.dataservice.document.ExtractionAssetType;
 import software.uncharted.terarium.hmiserver.models.dataservice.model.Model;
 import software.uncharted.terarium.hmiserver.models.dataservice.modelparts.ModelMetadata;
@@ -63,6 +66,7 @@ import software.uncharted.terarium.hmiserver.service.gollm.EmbeddingService;
 import software.uncharted.terarium.hmiserver.service.notification.NotificationGroupInstance;
 import software.uncharted.terarium.hmiserver.service.notification.NotificationService;
 import software.uncharted.terarium.hmiserver.service.tasks.ExtractEquationsResponseHandler;
+import software.uncharted.terarium.hmiserver.service.tasks.ExtractTablesResponseHandler;
 import software.uncharted.terarium.hmiserver.service.tasks.ExtractTextResponseHandler;
 import software.uncharted.terarium.hmiserver.service.tasks.TaskService;
 import software.uncharted.terarium.hmiserver.utils.ByteMultipartFile;
@@ -170,11 +174,12 @@ public class ExtractionService {
 
 		String documentAbstract;
 		String documentText;
+		List<String> documentTextPerPage;
 		List<ExtractionFile> files = new ArrayList<>();
 		List<DocumentExtraction> assets = new ArrayList<>();
 		List<JsonNode> equations = new ArrayList<>();
+		List<JsonNode> tables = new ArrayList<>();
 		ArrayNode variableAttributes;
-		JsonNode gollmCard;
 		boolean partialFailure = true;
 	}
 
@@ -204,12 +209,21 @@ public class ExtractionService {
 				userId
 			);
 
+			notificationInterface.sendMessage("Starting table extraction...");
+			log.info("Starting table extraction for document: {}", documentName);
+			final Future<TableExtraction> tableExtractionFuture = extractTablesFromPDF(
+				notificationInterface,
+				userId,
+				documentContents
+			);
+
 			// wait for text extraction
 			final TextExtraction textExtraction = textExtractionFuture.get();
 			notificationInterface.sendMessage("Text extraction complete!");
 			log.info("Text extraction complete for document: {}", documentName);
 			extractionResponse.documentAbstract = textExtraction.documentAbstract;
 			extractionResponse.documentText = textExtraction.documentText;
+			extractionResponse.documentTextPerPage = textExtraction.documentTextPerPage;
 			extractionResponse.assets = textExtraction.assets;
 			extractionResponse.files = textExtraction.files;
 
@@ -222,6 +236,18 @@ public class ExtractionService {
 			} catch (final Exception e) {
 				notificationInterface.sendMessage("Equation extraction failed, continuing");
 				log.error("Equation extraction failed for document: {}", documentName, e);
+				extractionResponse.partialFailure = true;
+			}
+
+			try {
+				// wait for table extraction
+				final TableExtraction tableExtraction = tableExtractionFuture.get();
+				notificationInterface.sendMessage("Table extraction complete!");
+				log.info("Table extraction complete for document: {}", documentName);
+				extractionResponse.tables = tableExtraction.tables;
+			} catch (final Exception e) {
+				notificationInterface.sendMessage("Table extraction failed, continuing");
+				log.error("Table extraction failed for document: {}", documentName, e);
 				extractionResponse.partialFailure = true;
 			}
 
@@ -283,32 +309,43 @@ public class ExtractionService {
 			document.setText(extractionResponse.documentText);
 		}
 
+		int pageNum = 0;
+		for (final String page : extractionResponse.documentTextPerPage) {
+			final ExtractedDocumentPage p = new ExtractedDocumentPage();
+			p.setText(page);
+			p.setPageNumber(pageNum);
+
+			document.getExtractions().add(p);
+			pageNum++;
+		}
+
 		if (extractionResponse.documentAbstract != null) {
 			document.setDocumentAbstract(extractionResponse.documentAbstract);
 		}
 
+		if (document.getMetadata() == null) {
+			document.setMetadata(new HashMap<>());
+		}
+
 		if (extractionResponse.variableAttributes != null) {
-			if (document.getMetadata() == null) {
-				document.setMetadata(new HashMap<>());
-			}
 			document.getMetadata().put("attributes", extractionResponse.variableAttributes);
 		}
 
-		if (extractionResponse.gollmCard != null) {
-			if (document.getMetadata() == null) {
-				document.setMetadata(new HashMap<>());
-			}
-			document.getMetadata().put("gollmCard", extractionResponse.gollmCard);
-		}
-
+		pageNum = 0;
 		if (extractionResponse.equations != null) {
-			if (document.getMetadata() == null) {
-				document.setMetadata(new HashMap<>());
-			}
 			document.getMetadata().put("equations", objectMapper.valueToTree(extractionResponse.equations));
+
+			document.getExtractions().get(pageNum).setEquations(extractionResponse.equations);
+			pageNum++;
 		}
 
-		log.info("Added extraction to document: {}", documentId);
+		pageNum = 0;
+		if (extractionResponse.tables != null) {
+			document.getMetadata().put("tables", objectMapper.valueToTree(extractionResponse.tables));
+
+			document.getExtractions().get(pageNum).setEquations(extractionResponse.tables);
+			pageNum++;
+		}
 
 		return documentService.updateAsset(document, projectId, hasWritePermission).orElseThrow();
 	}
@@ -747,7 +784,7 @@ public class ExtractionService {
 
 		int responseCode = HttpURLConnection.HTTP_BAD_GATEWAY;
 		if (!EQUATION_EXTRACTION_GPU_ENDPOINT.isEmpty()) {
-			final URL url = new URL(String.format("%s/health", EQUATION_EXTRACTION_GPU_ENDPOINT));
+			final URL url = URI.create(String.format("%s/health", EQUATION_EXTRACTION_GPU_ENDPOINT)).toURL();
 			final HttpURLConnection connection = (HttpURLConnection) url.openConnection();
 			connection.setRequestMethod("GET");
 			responseCode = connection.getResponseCode();
@@ -801,6 +838,7 @@ public class ExtractionService {
 
 		String documentAbstract;
 		String documentText;
+		List<String> documentTextPerPage = new ArrayList<>();
 		List<DocumentExtraction> assets = new ArrayList<>();
 		List<ExtractionFile> files = new ArrayList<>();
 	}
@@ -830,7 +868,71 @@ public class ExtractionService {
 
 			final TextExtraction extraction = new TextExtraction();
 
-			extraction.documentText = output.getResponse().asText();
+			extraction.documentText = "";
+			for (final JsonNode page : output.getResponse()) {
+				extraction.documentText += page.asText() + "\n";
+				extraction.documentTextPerPage.add(page.asText());
+			}
+
+			return extraction;
+		});
+	}
+
+	static class TableExtraction {
+
+		List<JsonNode> tables = new ArrayList<>();
+	}
+
+	public Future<TableExtraction> extractTablesFromPDF(
+		final NotificationGroupInstance<Properties> notificationInterface,
+		final String userId,
+		final byte[] pdf
+	) throws JsonProcessingException, TimeoutException, InterruptedException, ExecutionException, IOException {
+		final int REQUEST_TIMEOUT_MINUTES = 5;
+
+		final TaskRequest req = new TaskRequest();
+		req.setTimeoutMinutes(REQUEST_TIMEOUT_MINUTES);
+		req.setInput(pdf);
+		req.setScript(ExtractTablesResponseHandler.NAME);
+		req.setUserId(userId);
+		req.setType(TaskType.TABLE_EXTRACTION);
+
+		return executor.submit(() -> {
+			final TaskResponse resp = taskService.runTaskSync(req);
+
+			final byte[] outputBytes = resp.getOutput();
+			final ExtractTablesResponseHandler.ResponseOutput output = objectMapper.readValue(
+				outputBytes,
+				ExtractTablesResponseHandler.ResponseOutput.class
+			);
+
+			// Collect keys
+			final List<String> keys = new ArrayList<>();
+			final Iterator<Map.Entry<String, JsonNode>> fieldsIterator = output.getResponse().fields();
+			while (fieldsIterator.hasNext()) {
+				final Map.Entry<String, JsonNode> field = fieldsIterator.next();
+				keys.add(field.getKey());
+			}
+
+			// Sort keys
+			Collections.sort(keys);
+
+			final TableExtraction extraction = new TableExtraction();
+
+			for (final String key : keys) {
+				final JsonNode page = output.getResponse().get(key);
+				if (page.isArray()) {
+					final ArrayNode pageOfTables = objectMapper.createArrayNode();
+					for (final JsonNode table : page) {
+						JsonNode t = table;
+						if (table.isTextual()) {
+							t = objectMapper.readTree(table.asText());
+						}
+						pageOfTables.add(t);
+					}
+					extraction.tables.add(pageOfTables);
+				}
+			}
 
 			return extraction;
 		});
@@ -919,7 +1021,7 @@ public class ExtractionService {
 						final ObjectMapper objectMapper = new ObjectMapper();
 
 						final JsonNode rootNode = objectMapper.readTree(bytes);
-						if (rootNode instanceof ArrayNode arrayNode) {
+						if (rootNode instanceof final ArrayNode arrayNode) {
 							for (final JsonNode record : arrayNode) {
 								if (record.has("detect_cls") && record.get("detect_cls").asText().equals("Abstract")) {
 									abstractJsonNode = record;
